--- a/Tea Cozy/index.html
+++ b/Tea Cozy/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Tea Cozy</title>
-</head>
-<body>
-    <p>ON BUILD 2</p>
-</body>
+    <link rel="stylesheet" href="teaCozy.css" type="text/css" />
+  </head>
+  <body>
+    <div class="fixHeader">
+      <img src="images/img-tea-cozy-logo.webp" alt="Tea Cozy" class="logo" />
+      <ul class="menu">
+        <li><a href="#">Mission</a></li>
+        <li><a href="#">Featured Tea</a></li>
+        <li><a href="#">Locations</a></li>
+      </ul>
+    </div>
+
+    <div class="header">
+      <div class="mission">
+        <h2>Our Mission</h2>
+        <h4>
+          Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch,
+          Fair Trade, Organic Tea
+        </h4>
+      </div>
+    </div>
+
+    <div class="titleFood">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Copzy?</h4>
+    </div>
+    <div class="food">
+      <div id="fallBerryBlitz">Fall Berry Blitz Tea</div>
+      <div id="spicedRum">Spiced Rum Tea</div>
+      <div id="SeasonalDonuts">Seasonal Donuts</div>
+      <div id="myrtleAve">Myrtle Ave Tea</div>
+      <div id="bedfortBizarre">Bedford Bizarre Tea</div>
+    </div>
+
+    <div class="location">
+      <div class="titleLocation">Locations</div>
+      <div class="addressList">
+        <div class="address">
+          <h3>Downtown</h3>
+          <h3>384 West 4th St</h3>
+          <h3>Suite 108</h3>
+          <h3>Portland, Maine</h3>
+        </div>
+        <div class="address">
+          <h3>East Bayside</h3>
+          <h3>3433 Phisherman's Avenue</h3>
+          <h3>(Northwest Corner)</h3>
+          <h3>Portland, Maine</h3>
+        </div>
+        <div class="address">
+          <h3>Oakdale</h3>
+          <h3>515 Crescnt Avenue</h3>
+          <h3>Second Floor</h3>
+          <h3>Portland, Maine</h3>
+        </div>
+      </div>
+    </div>
+
+    <div class="contact">
+      <h3>The Tea Cozy</h3>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+
+    <footer>
+      <p class="copyright">copyright The Tea Cozy 2017</p>
+    </footer>
+  </body>
 </html>
