--- a/flexbox-business-site/index.html
+++ b/flexbox-business-site/index.html
@@ -4,24 +4,25 @@
 
 <head>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="resources/css/styles.css">
+  <link rel="stylesheet" href="resources/css/styles.css"> 
+ <!-- <link rel="stylesheet" href="resources/css/reset.css">-->
 </head>
 
 <body>
   <header>
-    <h1>Ma petite entreprise</h1>
+    <h1>My small business</h1>
     <img id="logo" src="resources/images/logo.png" alt="Little business">
   </header>
   <main>
-    <div class="presentation">Ma petite entreprise est une entreprise du Nord de l'Italie qui exporte ses pattes en France.</div>
-    <h2> Les produits</h2>
+    <div class="presentation">My small business is a company from northern Italy that exports its legs to France.</div>
+    <h2> Products</h2>
     <div class="products">
-      <div class="item"><img src="resources/images/prod1.png"><p>Prod1</p></div>
-      <div class="item"><img src="resources/images/prod2.png"><p>Prod1</p></div>
-      <div class="item"><img src="resources/images/prod3.png"><p>Prod1</p></div>
-      <div class="item"><img src="resources/images/prod4.png"><p>Prod1</p></div>
+      <div class="item"><div class="photo"><img src="resources/images/prod1.png"></div><div class="descriptPoduct"><p>Virtual PC</p><p>A powerful yet easy to use computer that will make your life easier. The HP Pavilion dv6t is an ideal laptop for students, professionals or anyone who needs a fast, reliable and easy to use computer.</p></div></div>
+      <div class="item"><div class="photo"><img src="resources/images/prod2.png"></div><div class="descriptPoduct"><p>Red mouse</p><p>Proteus Spectrum combines the best of two worlds: the precision of optical sensors and the responsiveness of laser tracking. The result? A wireless mouse that feels as good as it looks.</p></div></div>
+      <div class="item"><div class="photo"><img src="resources/images/prod3.png"></div><div class="descriptPoduct"><p>Micro</p><p>Micro is an easy to use voice recorder application that records your voice frequency into MP3 files. You can choose between recording or playing back your voice. The recorded voice will be saved as MP3 files which are compatible with most music players such as iTunes.</p></div></div>
+      <div class="item"><div class="photo"><img src="resources/images/prod4.png"></div><div class="descriptPoduct"><p>Tower</p><p>The best home computer but in better version. Just buy it !</p></div></div>
     </div>
-    <h2> Le staff</h2>
+    <h2> Staff</h2>
     <div class="employees">
       <div class="people"><img src="resources/images/image01.png"><p>People1</p></div>
       <div class="people"><img src="resources/images/image3.png"><p>People1</p></div>
