--- a/toDo/index.html
+++ b/toDo/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
   <title>To Do App</title>
   <link rel='stylesheet' href='style.css'>
   <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet'>
+  <meta charset="UTF-8">
 </head>
 <body>
 
   <!-- Header -->
   <div id='header'>
-    <h1>To Do or Not To Do</h1>
-    <h2 class='tagline'>(your priorities at a glance)</h2>
+    <h1>Faire ou ne pas faire</h1>
+    <h2 class='tagline'>(Vos priorités en un coup d'œil)</h2>
   </div>
 
   <!-- App Container -->
@@ -21,33 +22,33 @@
     <!-- To Do Section -->
     <div class='week'>
       <div class='row secondary-background'>
-        <div class='day square'><h3>MON</h3></div>
+        <div class='day square'><h3>LUN</h3></div>
         <div class='task square'>
-          <p> Insert some information about your week here :) </p>
+          <p> Information à insérer ici </p>
         </div>
         <div class='task square'></div>
         <div class='task square'></div>
       </div>
       <div class='row'>
-        <div class='day square'><h3>TUE</h3></div>
+        <div class='day square'><h3>MAR</h3></div>
         <div class='task square'></div>
         <div class='task square'></div>
         <div class='task square'></div>
       </div>
       <div class='row secondary-background'>
-        <div class='day square'><h3>WED</h3></div>
+        <div class='day square'><h3>MER</h3></div>
         <div class='task square'></div>
         <div class='task square'></div>
         <div class='task square'></div>
       </div>
       <div class='row'>
-        <div class='day square'><h3>THU</h3></div>
+        <div class='day square'><h3>JEU</h3></div>
         <div class='task square'></div>
         <div class='task square'></div>
         <div class='task square'></div>
       </div>
       <div class='row secondary-background'>
-        <div class='day square'><h3>FRI</h3></div>
+        <div class='day square'><h3>VEN</h3></div>
         <div class='task square'></div>
         <div class='task square'></div>
         <div class='task square'></div>
@@ -56,13 +57,13 @@
 
     <!-- Reminders Section -->
     <div class='reminders'>
-      <h3>Reminders</h3>
+      <h3>Rappels</h3>
     </div>
   </div>
 
   <!-- Footer -->
   <footer>
-    <span class='tagline'>copyright nottodo.com</span>
+    <span class='tagline'>copyright darmuweb.com</span>
   </footer>
 </body>
 </html>
