--- a/flexbox-business-2/index.html
+++ b/flexbox-business-2/index.html
@@ -9,17 +9,19 @@
 
 <body>
   <header>
-    <img src="img/logo.png" alt="Paper">
+    <div class="left">
+      <img src="img/logo.png" alt="Paper" class="logo">
+    </div>
     <div class="right">
-    <div class="titleOne">TechnicalPaper</div>
-    <ul>
-      <li><a href="#">Accueil</a></li>
-      <li><a href="#">Nouveautés</a></li>
-      <li><a href="#">Meilleures ventes</a></li>
-      <li><a href="#">FAQ</a></li>
-      <li><a href="#">A propos</a></li>
-    </ul>
-  </div>
+      <div class="titleOne">TechnicalPaper</div>
+      <ul>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">Nouveautés</a></li>
+        <li><a href="#">Meilleures ventes</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">A propos</a></li>
+      </ul>
+    </div>
   </header>
   <main>
     <div class="titleTwo">Produits favoris</div>
@@ -56,7 +58,7 @@
 
     </div>
 
-      <div class="titleTwo">Dernière collection Produits</div>
+    <div class="titleTwo">Dernière collection Produits</div>
     <div class="group">
       <div class="blocImg">
         <img src="img/cSharp.webp" alt="C #">
@@ -89,7 +91,7 @@
       </div>
     </div>
 
-      <div class="titleTwo">Infos entreprise</div>
+    <div class="titleTwo">Infos entreprise</div>
     <div class="group">
 
       <div class="blocImg">
