--- a/flexbox-business-2/index.html
+++ b/flexbox-business-2/index.html
@@ -5,6 +5,10 @@
 <head>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,10 +18,10 @@
     </div>
     <div class="right">
       <div class="titleOne">TechnicalPaper</div>
-      <ul>
+      <ul class="menu">
         <li><a href="#">Accueil</a></li>
         <li><a href="#">Nouveautés</a></li>
-        <li><a href="#">Meilleures ventes</a></li>
+        <li><a href="#">TOP ventes</a></li>
         <li><a href="#">FAQ</a></li>
         <li><a href="#">A propos</a></li>
       </ul>
