--- a/responsive-club/index.html
+++ b/responsive-club/index.html
@@ -27,16 +27,19 @@
             <img src="img/responsiveCar4.jpg" alt="Car Responsive">
             <img src="img/responsiveCar6.jpg" alt="Car Responsive">
         </div>
+        <p>Les voitures anciennes en disent long sans dire un mot. Manifestant une nostalgie sur quatre roues.</p>
             <h2>Sports</h2>
         <div>
             <img src="img/responsiveCar1.jpg" alt="Car Responsive">
             <img src="img/responsiveCar2.jpg" alt="Car Responsive">
             <img src="img/responsiveCar5.jpg" alt="Car Responsive">
         </div>
+        <p>De nombreuses voitures sportives modernes sont équipées de fonctionnalités de sécurité avancées, telles que des systèmes de freinage antiblocage, des airbags latéraux et des caméras de recul. Avant d'acheter une voiture sportive, assurez-vous qu'elle offre les fonctionnalités de sécurité dont vous avez besoin.</p>
             <h2>Top ZZZZZZ</h2>
         <div>
             <img src="img/responsiveCar7.jpg" class="special" alt="Car Responsive">
         </div>
+        <p class="specialp">Comme une sensation de "La Grange"...</p>
     </main>
     <footer>
         <ul class="menu">
